tests/golden/types/invalid_array_01.stderr
fregot ([34mtypecheck error[0m):
  "invalid_array_01.rego" (line 8, column 3):
  Subtype error:

    8|   array_big[_] > 0
         [31m^^^^^^^^^^^^^^^^[0m

  Cannot use type [33m[34mstring[0m[0m as [33m[34mnumber[0m[0m

fregot ([34mtypecheck error[0m):
  "invalid_array_01.rego" (line 13, column 3):
  Subtype error:

    13|   array_small[_] > 0
          [31m^^^^^^^^^^^^^^^^^^[0m

  Cannot use type [33m[34mstring[0m[0m as [33m[34mnumber[0m[0m

fregot ([34mtypecheck error[0m):
  "invalid_array_01.rego" (line 20, column 3):
  Subtype error:

    20|   set_string[_] > 0
          [31m^^^^^^^^^^^^^^^^^[0m

  Cannot use type [33m[34mstring[0m[36m|[0m[34mboolean[0m[0m as [33m[34mnumber[0m[0m
